2004-03-16  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.92.1

	* libgnome/gnome-init.c: (libgnome_userdir_setup),
	(libgnome_module_info_get):
	Put back the bind_textdomain_codeset, and use g_printerr
	instead of fprintf on stderr. This partially fixes #106549.
	
2004-03-15  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.92

2004-03-09  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.91

2004-03-04  Glynn Foster  <glynn.foster@sun.com>

	* configure.in, libgnome/Makefile.am,
	libgnome/libgnome-2.0-uninstalled.pc.in: Add
	uninstalled pc file.

2004-02-25  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added sr@ije to ALL_LINGUAS.

2004-02-24  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.90

2004-02-20  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* schemas/desktop_gnome_lockdown.schemas.in: Fix typo.

2004-02-07  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-02-05  Mark McLoughlin  <mark@skynet.ie>

	* schemas/desktop_gnome_lockdown.schemas.in:
	Add lockdown schemas.

2004-02-03  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.4

	* schemas/Makefile.am (install-data-local): Revert fix 
	since it broke distcheck

2004-01-23  Jody Goldberg <jody@gnome.org>

	* libgnome/gnome-program.c : Add missing #include <locale.h> so that
	  things compile.

2004-01-21  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_preinit):
	Translate strings instead of just marking them.
	(Completely fixes #106549, patch by Christian Neumair).
	
2004-01-21  Anders Carlsson  <andersca@gnome.org>

	* libgnome/gnome-init.c: (libgnome_module_info_get):
	* libgnome/gnome-program.c: (gnome_program_parse_args):
	Fix translation of program arguments. 
	(#106549, patch by Hidetoshi Tajima).
	