@@ -1,3 +1,8 @@
+Wed Mar 17 12:34:30 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* schemas/desktop_gnome_interface.schemas.in: Add
+	file_chooser_backend schema.
+
 2004-03-16  Anders Carlsson  <andersca@gnome.org>
 
 	* configure.in: Release 2.5.92.1
